# claude-marketplace

./: .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PSScriptAnalyzerSettings.psd1  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements-dev.txt
.claude/: delivery.local.md
.claude-plugin/: marketplace.json
.githooks/: pre-commit
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  codeql.yml
ci/: agent_contract.py  check-doc-links.py  check-notice.py  check-vendored-sync.py  check-versions.py  gen-skill-index.py  lint-changelog.py  lint-frontmatter.py  lint-no-bare-python.py  release.py  validate-plugins.py  verify_hook_runtime_controls.py
ci/tests/: test_aether_hooks.py  test_agent_contract.py  test_check_doc_links.py  test_ci_gates.py  test_ci_scanners.py  test_combined_invocation_regression.py  test_release.py
docs/: architecture.md  plugin-authoring.md  plugin-schema-gotchas.md  release-process.md  skill-index.md  testing-strategy.md
docs/adr/: 0001-marketplace-structure.md  0002-hook-vendoring-and-sync.md  0003-local-orchestration-tiers.md  0004-evidence-hmac-override.md  0005-context-routing.md  0006-releases-stay-local.md  0007-clean-recreation-launch.md  (+7 more)
scripts/: setup.ps1  setup.sh  verify.sh
templates/: agentic.json  narrative.json  research.json  scripting.json  web-dev.json
(+332 files in other folders)
